[gd_scene load_steps=21 format=3 uid="uid://ksl8ckhs71d"]

[ext_resource type="Texture2D" uid="uid://em346qvylgso" path="res://icon.svg" id="1_i1jlj"]
[ext_resource type="Script" path="res://player/player.gd" id="1_ly1mw"]
[ext_resource type="Texture2D" uid="uid://dd222bdei6dn5" path="res://art/player/Untitled_Artwork-1.png" id="3_yb7dk"]
[ext_resource type="Texture2D" uid="uid://d075p1v6xtw3f" path="res://art/player/Untitled_Artwork-2.png" id="4_dh371"]
[ext_resource type="Texture2D" uid="uid://tbgejc7c0cjd" path="res://art/player/Untitled_Artwork-3.png" id="5_uvd8g"]
[ext_resource type="Texture2D" uid="uid://qmsk5qp4r1pf" path="res://art/player/Untitled_Artwork-4.png" id="6_y04ah"]
[ext_resource type="Texture2D" uid="uid://wvgpf7h1kjix" path="res://art/player/Untitled_Artwork-5.png" id="7_3jmd3"]
[ext_resource type="Texture2D" uid="uid://clc6dou8q7flm" path="res://art/player/Untitled_Artwork-6.png" id="8_a67mt"]
[ext_resource type="Texture2D" uid="uid://dswges54atmvw" path="res://art/player/Untitled_Artwork-7.png" id="9_m2npg"]
[ext_resource type="Texture2D" uid="uid://dqk5jwqtnjwlb" path="res://art/player/Untitled_Artwork-8.png" id="10_yu0c7"]
[ext_resource type="AudioStream" uid="uid://ff0pfxo4ny73" path="res://aud/laserShoot.wav" id="11_s6awh"]
[ext_resource type="AudioStream" uid="uid://e4jqxw3poogy" path="res://aud/powerUp.wav" id="12_3v556"]
[ext_resource type="AudioStream" uid="uid://buoicihfrt406" path="res://aud/explosion.wav" id="12_jlck5"]
[ext_resource type="AudioStream" uid="uid://2bkqbhonppmo" path="res://aud/jump.wav" id="14_j5557"]
[ext_resource type="AudioStream" uid="uid://b7etm7lvlw4pk" path="res://aud/synth.wav" id="15_lr5mh"]

[sub_resource type="Curve" id="Curve_x6ad7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wsuw5"]
curve = SubResource("Curve_x6ad7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dp0sc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(64, 64, 1)
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_max = 444.87
gravity = Vector3(0, 0, 0)
scale_max = 58.38
scale_curve = SubResource("CurveTexture_wsuw5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts4d4"]
size = Vector2(128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ruuqi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yb7dk")
}, {
"duration": 1.0,
"texture": ExtResource("4_dh371")
}, {
"duration": 1.0,
"texture": ExtResource("5_uvd8g")
}, {
"duration": 1.0,
"texture": ExtResource("6_y04ah")
}, {
"duration": 1.0,
"texture": ExtResource("7_3jmd3")
}, {
"duration": 1.0,
"texture": ExtResource("8_a67mt")
}, {
"duration": 1.0,
"texture": ExtResource("9_m2npg")
}, {
"duration": 1.0,
"texture": ExtResource("10_yu0c7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ly1mw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 163
process_material = SubResource("ParticleProcessMaterial_dp0sc")
lifetime = 0.2

[node name="Icon" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_i1jlj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ts4d4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ruuqi")
frame_progress = 0.883194

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_s6awh")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_jlck5")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_3v556")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_j5557")

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_lr5mh")
volume_db = -13.565
